# singularity-desktop

./: .gitmodules  CONTRIBUTING.md  Makefile  README.md  meson.build
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  feedback.yml
data/: dev.sinty.desktop.gschema.xml
scripts/: deploy-to-host.sh  install-greeter.sh  install-to-opt.sh
subprojects/singularity-splash/: meson.build
subprojects/singularity-splash/src/: splash_main.c
